# adaptogen

./: Cargo.toml  LICENSE.md  README.md
examples/: claude_parser.rs  qwen_parser.rs  run_examples.rs
src/: lib.rs  normalized.rs  parser.rs  registry.rs
tests/: integration_test.rs
