[package]
name = "adaptogen"
version = "0.1.0"
edition = "2021"
authors = ["Gianni Crivello <gianni.crivello@gmail.com>"]
description = "A library for normalizing outputs from different LLM providers"
license = "MIT"
repository = "https://github.com/sylow-solutions/adaptogen"
documentation = "https://docs.rs/adaptogen"
readme = "README.md"
keywords = ["llm", "parser", "ai"]
categories = ["text-processing", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
